--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Pre-sortie checklist and notes",
   "main": "index.es",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-core/register --recursive"
   },
   "repository": {
     "type": "git",
