--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "fs-extra": "^3.0.1",
     "mocha": "^3.3.0",
     "path-extra": "^4.1.0"
+  },
+  "dependencies": {
+    "react-textarea-autosize": "^5.0.6"
   }
 }
