--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Pre-sortie checklist and notes",
   "main": "index.es",
   "scripts": {
+    "lint": "eslint '**/*.es'",
     "test": "mocha --compilers js:babel-core/register --recursive"
   },
   "repository": {
@@ -32,12 +33,12 @@
     "babel-preset-es2015-node6": "^0.4.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
+    "eslint": "^4.4.1",
+    "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.0.0",
-    "fs-extra": "^3.0.1",
+    "fs-extra": "^4.0.1",
     "mocha": "^3.3.0",
     "path-extra": "^4.1.0"
   },
